fix bottom border not showing up

--- a/apps/topicmaps/kulturstadtplan/src/styles.css
+++ b/apps/topicmaps/kulturstadtplan/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.nav-tabs {
+  border-bottom: 1px solid #dee2e6 !important;
+}
